2008-04-10  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/search_sqlalch.py:
	* kiwi/db/sqlalch.py:
	Add SQLAlchemy support in the search interface. Fixes #3668

2008-04-10  Johan Dahlin  <jdahlin@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* gazpacho-plugin/resources/kiwiwidgets/kiwicolorbutton.png:
	* kiwi/ui/gazpacholoader.py:
	Add initial support for GtkColorButton. Needs a bit of adjustment
	on the gazpacho side aswell.

2008-04-09  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/listdialog.py (ListSlave.__init__): 
	Add refresh() and clear() methods.

	* kiwi/ui/objectlist.py (ObjectList._setup_columns): Fix error message
	so it actually shows something useful.
	Set context header menu text to the capitalized attribute name if the
	the normal title is empty.
	
2008-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/listdialog.py:
	Rename ListDialog to ListSlave and add subclass
	which joins a gtk.Dialog and a ListSlave

2008-03-18  Johan Dahlin  <johan@gnome.org>

	* kiwi/ui/gazpacholoader.py:
	Speculative fix for:
	File kiwi/ui/gazpacholoader.py, line 218, in _editor_edit
	    proxy.set_value(model[active_iter][1])
	TypeError: could not parse subscript as a tree path

=== 1.9.21 ===
2008-03-17 George Y. Kussumoto <george@async.com.br>
	* NEWS:
	* debian/changelog:
	* doc/howto.tex:
	* doc/release-checklist.txt:
	* kiwi/__version__.py:
	* kiwi.spec:
	Release 1.9.21 

2008-03-07  Fabio Morbec  <fabio@async.com.br>
	* Makefile: Correcting the svn address

2008-03-07  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/comboentry.py:
	* kiwi/ui/entrycompletion.py: Handle case when entry completion is poping
	up and the entry loses focus. Fixes bug #3639

2008-03-06  Johan Dahlin  <johan@gnome.org>

	* po/es_CL: Added Spanish/Chilean translation
	(Gabriel Felipe Cornejo Salas)

2008-03-03  Johan Dahlin  <johan@gnome.org>
